# port-probe

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: release-on-tag.yml
app/: ConfigDialog.cpp  ConfigDialog.h  DeviceTableModel.cpp  DeviceTableModel.h  MainWindow.cpp  MainWindow.h  QrCodeDialog.cpp  QrCodeDialog.h  main.cpp  resources.qrc
core/: Admin.cpp  Admin.h  DeviceParser.cpp  DeviceParser.h  Hex.cpp  Hex.h  Models.h  NicService.cpp  NicService.h  SettingsStore.cpp  SettingsStore.h  UdpScanner.cpp  UdpScanner.h
packaging/: WIN7_CHECKLIST.md  build-installer.ps1  installer.iss  pack.ps1  update-manifest.example.json
update/: latest.json
